minidecaf/.antlr/MiniDecafExprParser.java
// Generated from /home/kasumi/Documents/3rdYear1/Compiler/minidecaf-2018013443/minidecaf/MiniDecafExpr.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiniDecafExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, Int=5, Return=6, If=7, Else=8, For=9, 
		Do=10, While=11, Break=12, Continue=13, Lparen=14, Rparen=15, Lbrkt=16, 
		Rbrkt=17, Lbrace=18, Rbrace=19, Comma=20, Semicolon=21, Punctuator=22, 
		Add=23, Sub=24, Mul=25, Div=26, Percent=27, Exclamation=28, Tilde=29, 
		Ampersand=30, Langle=31, Rangle=32, Langle_eq=33, Rangle_eq=34, Double_eq=35, 
		Exclam_eq=36, Equal=37, Double_amp=38, Double_bar=39, Operator=40, Integer=41, 
		Whitespace=42, Identifier=43;
	public static final int
		RULE_program = 0, RULE_externalDecline = 1, RULE_function = 2, RULE_variableType = 3, 
		RULE_parameterList = 4, RULE_declaration = 5, RULE_block = 6, RULE_blockItem = 7, 
		RULE_statement = 8, RULE_expression = 9, RULE_assign = 10, RULE_conditional = 11, 
		RULE_logical_or = 12, RULE_logical_and = 13, RULE_bit_or = 14, RULE_bit_xor = 15, 
		RULE_bit_and = 16, RULE_equal = 17, RULE_relational = 18, RULE_add = 19, 
		RULE_multiply = 20, RULE_cast = 21, RULE_unary = 22, RULE_postfix = 23, 
		RULE_argumentList = 24, RULE_atom = 25, RULE_addOperator = 26, RULE_multiplyOperator = 27, 
		RULE_equalOperator = 28, RULE_unaryOperator = 29, RULE_relationalOperator = 30, 
		RULE_assignOperator = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "externalDecline", "function", "variableType", "parameterList", 
			"declaration", "block", "blockItem", "statement", "expression", "assign", 
			"conditional", "logical_or", "logical_and", "bit_or", "bit_xor", "bit_and", 
			"equal", "relational", "add", "multiply", "cast", "unary", "postfix", 
			"argumentList", "atom", "addOperator", "multiplyOperator", "equalOperator", 
			"unaryOperator", "relationalOperator", "assignOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'?'", "':'", "'|'", "'^'", "'int'", "'return'", "'if'", "'else'", 
			"'for'", "'do'", "'while'", "'break'", "'continue'", "'('", "')'", "'['", 
			"']'", "'{'", "'}'", "','", "';'", null, "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'!'", "'~'", "'&'", "'<'", "'>'", "'<='", "'>='", "'=='", "'!='", 
			"'='", "'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "Int", "Return", "If", "Else", "For", "Do", 
			"While", "Break", "Continue", "Lparen", "Rparen", "Lbrkt", "Rbrkt", "Lbrace", 
			"Rbrace", "Comma", "Semicolon", "Punctuator", "Add", "Sub", "Mul", "Div", 
			"Percent", "Exclamation", "Tilde", "Ampersand", "Langle", "Rangle", "Langle_eq", 
			"Rangle_eq", "Double_eq", "Exclam_eq", "Equal", "Double_amp", "Double_bar", 
			"Operator", "Integer", "Whitespace", "Identifier"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniDecafExpr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniDecafExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiniDecafExprParser.EOF, 0); }
		public List<ExternalDeclineContext> externalDecline() {
			return getRuleContexts(ExternalDeclineContext.class);
		}
		public ExternalDeclineContext externalDecline(int i) {
			return getRuleContext(ExternalDeclineContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				externalDecline();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Int );
			setState(69);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExternalDeclineContext extends ParserRuleContext {
		public ExternalDeclineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_externalDecline; }
	 
		public ExternalDeclineContext() { }
		public void copyFrom(ExternalDeclineContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DeclarationExternalContext extends ExternalDeclineContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public DeclarationExternalContext(ExternalDeclineContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionExternalContext extends ExternalDeclineContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public FunctionExternalContext(ExternalDeclineContext ctx) { copyFrom(ctx); }
	}

	public final ExternalDeclineContext externalDecline() throws RecognitionException {
		ExternalDeclineContext _localctx = new ExternalDeclineContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_externalDecline);
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new FunctionExternalContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				function();
				}
				break;
			case 2:
				_localctx = new DeclarationExternalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				declaration();
				setState(73);
				match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	 
		public FunctionContext() { }
		public void copyFrom(FunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionDefineContext extends FunctionContext {
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MiniDecafExprParser.Identifier, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public FunctionDefineContext(FunctionContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionDeclarationContext extends FunctionContext {
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MiniDecafExprParser.Identifier, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public FunctionDeclarationContext(FunctionContext ctx) { copyFrom(ctx); }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new FunctionDefineContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				variableType(0);
				setState(78);
				match(Identifier);
				setState(79);
				match(Lparen);
				setState(80);
				parameterList();
				setState(81);
				match(Rparen);
				setState(82);
				block();
				}
				break;
			case 2:
				_localctx = new FunctionDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				variableType(0);
				setState(85);
				match(Identifier);
				setState(86);
				match(Lparen);
				setState(87);
				parameterList();
				setState(88);
				match(Rparen);
				setState(89);
				match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableTypeContext extends ParserRuleContext {
		public VariableTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variableType; }
	 
		public VariableTypeContext() { }
		public void copyFrom(VariableTypeContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PointerTypeContext extends VariableTypeContext {
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public TerminalNode Mul() { return getToken(MiniDecafExprParser.Mul, 0); }
		public PointerTypeContext(VariableTypeContext ctx) { copyFrom(ctx); }
	}
	public static class IntTypeContext extends VariableTypeContext {
		public TerminalNode Int() { return getToken(MiniDecafExprParser.Int, 0); }
		public IntTypeContext(VariableTypeContext ctx) { copyFrom(ctx); }
	}

	public final VariableTypeContext variableType() throws RecognitionException {
		return variableType(0);
	}

	private VariableTypeContext variableType(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		VariableTypeContext _localctx = new VariableTypeContext(_ctx, _parentState);
		VariableTypeContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_variableType, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new IntTypeContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(94);
			match(Int);
			}
			_ctx.stop = _input.LT(-1);
			setState(100);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new PointerTypeContext(new VariableTypeContext(_parentctx, _parentState));
					pushNewRecursionContext(_localctx, _startState, RULE_variableType);
					setState(96);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(97);
					match(Mul);
					}
					} 
				}
				setState(102);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParameterListContext extends ParserRuleContext {
		public List<DeclarationContext> declaration() {
			return getRuleContexts(DeclarationContext.class);
		}
		public DeclarationContext declaration(int i) {
			return getRuleContext(DeclarationContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(MiniDecafExprParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(MiniDecafExprParser.Comma, i);
		}
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_parameterList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Int) {
				{
				setState(103);
				declaration();
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(104);
					match(Comma);
					setState(105);
					declaration();
					}
					}
					setState(110);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public VariableTypeContext variableType() {
			return getRuleContext(VariableTypeContext.class,0);
		}
		public TerminalNode Identifier() { return getToken(MiniDecafExprParser.Identifier, 0); }
		public List<TerminalNode> Lbrkt() { return getTokens(MiniDecafExprParser.Lbrkt); }
		public TerminalNode Lbrkt(int i) {
			return getToken(MiniDecafExprParser.Lbrkt, i);
		}
		public List<TerminalNode> Integer() { return getTokens(MiniDecafExprParser.Integer); }
		public TerminalNode Integer(int i) {
			return getToken(MiniDecafExprParser.Integer, i);
		}
		public List<TerminalNode> Rbrkt() { return getTokens(MiniDecafExprParser.Rbrkt); }
		public TerminalNode Rbrkt(int i) {
			return getToken(MiniDecafExprParser.Rbrkt, i);
		}
		public TerminalNode Equal() { return getToken(MiniDecafExprParser.Equal, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			variableType(0);
			setState(114);
			match(Identifier);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Lbrkt) {
				{
				{
				setState(115);
				match(Lbrkt);
				setState(116);
				match(Integer);
				setState(117);
				match(Rbrkt);
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Equal) {
				{
				setState(123);
				match(Equal);
				setState(124);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode Lbrace() { return getToken(MiniDecafExprParser.Lbrace, 0); }
		public TerminalNode Rbrace() { return getToken(MiniDecafExprParser.Rbrace, 0); }
		public List<BlockItemContext> blockItem() {
			return getRuleContexts(BlockItemContext.class);
		}
		public BlockItemContext blockItem(int i) {
			return getRuleContext(BlockItemContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(Lbrace);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Int) | (1L << Return) | (1L << If) | (1L << For) | (1L << Do) | (1L << While) | (1L << Break) | (1L << Continue) | (1L << Lparen) | (1L << Lbrace) | (1L << Semicolon) | (1L << Sub) | (1L << Mul) | (1L << Exclamation) | (1L << Tilde) | (1L << Ampersand) | (1L << Integer) | (1L << Identifier))) != 0)) {
				{
				{
				setState(128);
				blockItem();
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(134);
			match(Rbrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockItemContext extends ParserRuleContext {
		public BlockItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockItem; }
	 
		public BlockItemContext() { }
		public void copyFrom(BlockItemContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BlockItemStatementContext extends BlockItemContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public BlockItemStatementContext(BlockItemContext ctx) { copyFrom(ctx); }
	}
	public static class BlockItemDeclarationContext extends BlockItemContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public BlockItemDeclarationContext(BlockItemContext ctx) { copyFrom(ctx); }
	}

	public final BlockItemContext blockItem() throws RecognitionException {
		BlockItemContext _localctx = new BlockItemContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_blockItem);
		try {
			setState(140);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Return:
			case If:
			case For:
			case Do:
			case While:
			case Break:
			case Continue:
			case Lparen:
			case Lbrace:
			case Semicolon:
			case Sub:
			case Mul:
			case Exclamation:
			case Tilde:
			case Ampersand:
			case Integer:
			case Identifier:
				_localctx = new BlockItemStatementContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(136);
				statement();
				}
				break;
			case Int:
				_localctx = new BlockItemDeclarationContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(137);
				declaration();
				setState(138);
				match(Semicolon);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileStatementContext extends StatementContext {
		public TerminalNode While() { return getToken(MiniDecafExprParser.While, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public WhileStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BlockStatementContext extends StatementContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public BlockStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BlankStatementContext extends StatementContext {
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public BlankStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ForDeclarationStatementContext extends StatementContext {
		public DeclarationContext init;
		public ExpressionContext ctrl;
		public ExpressionContext post;
		public TerminalNode For() { return getToken(MiniDecafExprParser.For, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public List<TerminalNode> Semicolon() { return getTokens(MiniDecafExprParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(MiniDecafExprParser.Semicolon, i);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ForDeclarationStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ForStatementContext extends StatementContext {
		public ExpressionContext init;
		public ExpressionContext ctrl;
		public ExpressionContext post;
		public TerminalNode For() { return getToken(MiniDecafExprParser.For, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public List<TerminalNode> Semicolon() { return getTokens(MiniDecafExprParser.Semicolon); }
		public TerminalNode Semicolon(int i) {
			return getToken(MiniDecafExprParser.Semicolon, i);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public ForStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class BreakStatementContext extends StatementContext {
		public TerminalNode Break() { return getToken(MiniDecafExprParser.Break, 0); }
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public BreakStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ExpressionStatementContext extends StatementContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public ExpressionStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class DoWhileStatementContext extends StatementContext {
		public TerminalNode Do() { return getToken(MiniDecafExprParser.Do, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode While() { return getToken(MiniDecafExprParser.While, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public DoWhileStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ContinueStatementContext extends StatementContext {
		public TerminalNode Continue() { return getToken(MiniDecafExprParser.Continue, 0); }
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public ContinueStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class ReturnStatementContext extends StatementContext {
		public TerminalNode Return() { return getToken(MiniDecafExprParser.Return, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Semicolon() { return getToken(MiniDecafExprParser.Semicolon, 0); }
		public ReturnStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
	public static class IfStatementContext extends StatementContext {
		public StatementContext thenStatement;
		public StatementContext elseStatement;
		public TerminalNode If() { return getToken(MiniDecafExprParser.If, 0); }
		public TerminalNode Lparen() { return getToken(MiniDecafExprParser.Lparen, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode Rparen() { return getToken(MiniDecafExprParser.Rparen, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode Else() { return getToken(MiniDecafExprParser.Else, 0); }
		public IfStatementContext(StatementContext ctx) { copyFrom(ctx); }
	}
